--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #06BBCC;
+    --primary: #CCAB4C;
     --light: #F0FBFC;
     --dark: #181d38;
 }
