--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,8 @@
     margin-right: 30px;
     padding: 25px 0;
     color: #FFFFFF;
-    font-size: 15px;
+    font-size: 17px;
+    font-weight: bold;
     text-transform: uppercase;
     outline: none;
 }
@@ -108,6 +109,10 @@
 
     .navbar-light .navbar-nav {
         border-top: 1px solid #EEEEEE;
+    }
+
+    .logo{
+        display:contents;
     }
 }
 
@@ -390,7 +395,7 @@
     display: block;
     margin-bottom: 5px;
     padding: 0;
-    text-align: left;
+    text-align: right;
     color: #FFFFFF;
     font-size: 15px;
     font-weight: normal;
@@ -400,7 +405,7 @@
 
 .footer .btn.btn-link::before {
     position: relative;
-    content: "\f105";
+    content: "\f104";
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     margin-right: 10px;
