--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,10 @@
     .logo{
         display:contents;
     }
+
+    .textssssss{
+        padding: 20px;
+    }
 }
 
 .navbar-light .navbar-brand,
